@@ -1,3 +1,12 @@
+2001-09-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/geocent.c: I have modified the Convert_Geodetic_To_Geocentric() 
+	function to clamp Latitudes just a little out of the range
+	-PI/2 to PI/2 and to no longer do error checks on Longitudes since
+	they will be auto-wrapped by sin() and cos(). 
+
+	See http://bugzilla.remotesensing.org/show_bug.cgi?id=17
+
 2001-08-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/makefile.vc: improved the setting of PROJ_LIB defaults.
